# kinoko

./: .gitignore  README.md  build.yaml  local.properties  pubspec.yaml
plugins/flutter_git/cpp/: CMakeLists.txt  bmt.c  flutter_git.h  main.c
plugins/flutter_git/cpp/libgit2/: CMakeLists.txt
plugins/flutter_git/cpp/libgit2/cmake/: SelectHTTPSBackend.cmake
plugins/flutter_git/cpp/libgit2/src/: CMakeLists.txt
plugins/glib/: CMakeLists.txt  build_ios.rb  proguard-rules.pro  pubspec.yaml
plugins/glib/android/: build.gradle  settings.gradle
plugins/glib/android/gradle/wrapper/: gradle-wrapper.properties
plugins/glib/android/src/main/: AndroidManifest.xml
plugins/glib/env/v8/: env.js  object.js  test.js
plugins/glib/example/: README.md  pubspec.yaml
plugins/glib/example/android/app/: build.gradle
plugins/glib/example/android/gradle/wrapper/: gradle-wrapper.properties
plugins/glib/example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
plugins/glib/example/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
plugins/glib/example/ios/Runner.xcodeproj/: project.pbxproj
plugins/glib/example/lib/: main.dart
plugins/glib/example/test/: widget_test.dart
plugins/glib/ios/: glib.podspec
plugins/glib/ios/Classes/: GlibPlugin.h  GlibPlugin.m
plugins/glib/ios/include/: dart_main_ios.h
plugins/glib/lib/: glib.dart
plugins/glib/lib/core/: array.dart  binds.dart  callback.dart  core.dart  data.dart  gmap.dart
plugins/glib/lib/main/: collection_data.dart  context.dart  data_item.dart  error.dart  models.dart  project.dart  setting_item.dart
plugins/glib/lib/utils/: bit64.dart  browser.dart  git_repository.dart  platform.dart  request.dart  script_context.dart
plugins/glib/src/application/: dart_main_android.cpp  dart_main_ios.mm  glib.cpp  gs_define.h
plugins/glib/src/application/main/: Collection.cpp  Collection.h  Context.cpp  Context.h  DataItem.cpp  DataItem.h  LibraryContext.cpp  LibraryContext.h  Project.cpp  Project.h  Settings.cpp  Settings.h
plugins/glib/src/application/models/: BookData.cpp  BookData.h  CollectionData.cpp  CollectionData.h  GitLibrary.cpp  GitLibrary.h  KeyValue.cpp  KeyValue.h
plugins/glib/src/application/utils/: Bit64.h  Browser.h  Encoder.cpp  Encoder.h  Error.cpp  GitRepository.cpp  GitRepository.h  GumboParser.cpp  JSON.cpp  JSON.h  Platform.h  Request.h  ScriptContext.cpp  SharedData.cpp  SharedData.h  YAML.cpp  YAML.h
plugins/glib/src/application/utils/dart/: DartBrowser.cpp  DartBrowser.h  DartPlatform.cpp  DartPlatform.h  DartRequest.cpp  DartRequest.h
plugins/glib/src/application/utils/database/: DBMaker.cpp  (+4 more)
plugins/glib/src/gcore/: CMakeLists.txt  README.md  process.rb
plugins/glib/src/gcore/core/: Action.h  Array.h  Base.h  Callback.h  Class.h  Data.h  Define.h  FixType.h  Hash.h  IMP.cpp  Map.h  Method.h  MethodImp.h  Property.h  Ref.h  Reference.h  Singleton.h  String.h  StringName.h  Variant.h  core.h  core_define.h  runtime.h
plugins/glib/src/gcore/script/: ScriptTransport.cpp  ScriptTransport.h  Utils.h  script_define.h
plugins/glib/src/gcore/test/: TestObject.cpp  TestObject.h  main.cpp
plugins/glib/src/shelf/: dart_main.cpp  dart_main_android.cpp  dart_main_ios.mm  glib.cpp  glib.h
plugins/glib/src/shelf/android/: Object.cpp  Object.h
plugins/glib/src/shelf/main/: Collection.cpp  Collection.h  Context.cpp  Context.h  DataItem.cpp  DataItem.h  LibraryContext.cpp  LibraryContext.h  Menu.cpp  Menu.h  Project.cpp  Project.h  Settings.cpp  Settings.h  types.h
plugins/glib/src/shelf/models/: BookData.cpp  BookData.h  CollectionData.cpp  CollectionData.h  GitLibrary.cpp  GitLibrary.h  KeyValue.cpp  SearchData.cpp  SearchData.h
plugins/glib/src/shelf/utils/: Bit64.cpp  Encoder.cpp  Encoder.h  Error.h  GitRepository.cpp  GitRepository.h  GumboParser.cpp  GumboParser.h  JSON.h  Platform.h  Platform_PC.cpp  Platform_PC.h  Platform_android.cpp  Request.cpp  Request.h  Request_android.cpp  ScriptContext.cpp  ScriptContext.h  SharedData.cpp  SharedData.h  YAML.cpp  YAML.h
plugins/glib/test/: glib_test.dart
plugins/glib/thirdparties/bit64/: bit64.cpp  bit64.h
plugins/glib/thirdparties/gumbo-query/: Node.h  Selection.h  Selector.cpp
plugins/glib/thirdparties/iconv/src/: binary-io.c  binary-io.h  c-ctype.h  config.h  dirname.h  error.c  error.h  getprogname.c  getprogname.h  intprops.h  localcharset.c  msvc-inval.c  msvc-nothrow.c  progname.h  progreloc.c  read.c  readlink.c  setenv.c  stdio-write.c  unistd.h  xmalloc.c  xstrdup.c
plugins/glib/thirdparties/libgit2/: CMakeCache.txt  CMakeLists.txt  make-standalone-toolchain.sh
plugins/glib/thirdparties/libgit2/src/: CMakeLists.txt
plugins/glib/thirdparties/libiconv-1.16/: config.h  config.status  libtool
plugins/glib/thirdparties/libiconv-1.16/include/: iconv.h
plugins/glib/thirdparties/libiconv-1.16/lib/: Makefile  config.h  iconv-exports.lo  libiconv.la  libiconv.res.lo
plugins/glib/thirdparties/libiconv-1.16/libcharset/: config.h  config.status  libtool
plugins/glib/thirdparties/libiconv-1.16/po/: Makefile  Makefile.in
plugins/glib/thirdparties/libiconv-1.16/src/: Makefile  iconv.res
plugins/glib/thirdparties/libiconv-1.16/srclib/: Makefile  stdlib.h  string.h  unistd.h
plugins/glib/thirdparties/libyaml/: .gitignore
plugins/glib/thirdparties/mruby/include/: mruby.h
plugins/glib/thirdparties/mruby/mrbgems/: gem_init.c
plugins/glib/thirdparties/mruby/mrblib/: mrblib.c
plugins/glib/thirdparties/mruby/src/: print.c
plugins/glib/thirdparties/onigmo/: config.h  onigmoposix.h  regposerr.c  regposix.c  st.h
plugins/glib/thirdparties/onigmo-6.1.3/: config.h
plugins/glib/thirdparties/onigmo-6.1.3/win32/: Makefile
plugins/glib/thirdparties/openssl/: CMakeLists.txt
plugins/glib/thirdparties/quickjs/: pack.h  qjs.c  quickjs.c  quickjs.h
plugins/glib/thirdparties/secp256k1/: .gitignore
plugins/glib/thirdparties/secp256k1/src/: libsecp256k1-config.h
plugins/glib/thirdparties/sha1/: sha1.h
plugins/glib/thirdparties/sqlite3/: CMakeLists.txt  keywordhash.h  opcodes.c  opcodes.h  parse.c  parse.h
(+525 files in other folders)
